fix: top safe area on android
Fixes dead space at the top of the screen due to including the invisible system status bar in the safe area.
Fixes app status bar being hidden by camera notch on some devices.

--- a/common/css.css
+++ b/common/css.css
@@ -13,7 +13,7 @@
   --sidebar-minimised: 0px;
   --sidebar-width: 0px;
   --navbar-height: 7rem;
-  --statusbar-height: 3.2rem;
+  --statusbar-height: 28px;
   --safe-area-top: 0px;
   --safe-area-left: 0px;
 
